change to perp + beacon indexing

--- a/package.json
+++ b/package.json
@@ -1,23 +1,11 @@
 {
-  "name": "poap-mainnet-subgraph",
-  "license": "UNLICENSED",
+  "name": "perp-city-elon-tilt",
+  "license": "GPL-3.0",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-
-    "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:xdai": "mustache config/xdai.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:chiado": "mustache config/chiado.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:goerli": "mustache config/goerli.json subgraph.template.yaml > subgraph.yaml",
-
-    "deploy:mainnet": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ poap-xyz/poap",
-    "deploy:xdai": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ poap-xyz/poap-xdai",
-    "deploy:chiado": "goldsky subgraph deploy poap-xyz/poap-chiado",
-    "deploy:goerli": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ poap-xyz/poap-goerli",
-
-    "create-local": "graph create --node http://localhost:8020/ poap-xyz/poap",
-    "remove-local": "graph remove --node http://localhost:8020/ poap-xyz/poap",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 poap-xyz/poap"
+    "prepare:base-sepolia": "mustache config/base-sepolia.json subgraph.template.yaml > subgraph.yaml",
+    "deploy:base-sepolia": "source .env && goldsky subgraph deploy perp-city-elon-tilt/0.0.1 --token $GOLDSKY_ACCESS_TOKEN"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.51.0",
@@ -25,5 +13,6 @@
   },
   "devDependencies": {
     "mustache": "^4.0.1"
-  }
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
